edition = "2023";
package testgen;

import "confpb/v1/field.proto";

option go_package = ".;main";

option features.field_presence = IMPLICIT;

message Uint32 {
  uint32 normal = 1 [(confpb.v1.env) = "UINT32"];
  uint32 with_presence = 2 [(confpb.v1.env) = "UINT32_WITH_PRESENCE", features.field_presence = EXPLICIT];
  repeated uint32 list = 3 [(confpb.v1.env) = "UINT32_LIST"];

  oneof oneof_test {
    uint32 oneof_option_a = 4 [(confpb.v1.env) = "UINT32_ONEOF_A"];
    uint32 oneof_option_b = 5 [(confpb.v1.env) = "UINT32_ONEOF_B"];
  }
}
